--- a/.env.local.example
+++ b/.env.local.example
@@ -1,2 +1,3 @@
-NEXT_PUBLIC_SUPABASE_URL=your-project-url
+NEXT_PUBLIC_SUPABASE_URL=https://<project_ref>.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+NEXT_PUBLIC_USE_MOCK_API=true
